--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,7 @@ services:
     envVars:
       - key: TELEGRAM_BOT_TOKEN
         sync: false
-      - key: ADMIN_IDS
-        value: ""
-        sync: false
+      - key: PORT
+        value: 10000
+    healthCheckPath: /health
+    autoDeploy: true
